--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,16 @@
   "exclude": ["node_modules"],
   "compilerOptions": {
     "outDir": "./build",
-    "jsx": "react",
-    "target": "ES6",
-    "module": "commonjs",
+    "jsx": "react-jsx",
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node"],
-    "lib": ["DOM", "ES2022"]
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "isolatedModules": true,
+    "resolveJsonModule": true
   }
 }
