--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "template-fe",
-  "version": "1.0.0",
+  "name": "auth-frontend-service",
+  "version": "0.1.0",
+  "description": "Home.Local authentication service frontend",
   "dependencies": {
+    "@tanstack/react-query": "^5.62.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "axios": "^1.7.9",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.10",
+    "buffer": "^6.0.3",
     "parcel": "^2.13.3",
     "typescript": "^5.8.2"
   },
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html --dist-dir dist",
-    "start": "npm run build && npx serve -s dist"
+    "start": "npm run build && npx serve -s dist",
+    "type-check": "tsc --noEmit"
   }
 }
