--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,20 @@
+# Auth Frontend Service - Environment Configuration
+# Copy this file to .env and adjust values for your environment.
+
+# Auth service backend API URL
+# Development: http://localhost:8000
+# Staging: https://auth.staging.iriai.app
+# Production: https://auth.iriai.app
 AUTH_SERVICE_URL=http://localhost:8000
+
+# Auth frontend URL (this service)
+# Development: http://localhost:1234
+# Staging: https://auth-frontend.staging.iriai.app
+# Production: https://auth.iriai.app
+AUTH_FRONTEND_URL=http://localhost:1234
+
+# Directory app URL (for default return URL)
+# Development: http://localhost:5173
+# Staging: https://directory.japantown.staging.iriai.app
+# Production: https://directory.japantown.iriai.app
+DIRECTORY_URL=http://localhost:5173
